quick vertical spacing fix

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -91,10 +91,12 @@
 }
 
 body {
-  min-height: 100vh;
+  height: 100vh;
+  min-width: 16rem;
+  display: flex;
   text-align: center;
-  padding: 0 3rem;
   margin: 0;
+  padding: 0 2rem;
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
@@ -105,11 +107,12 @@ body {
 }
 
 #app {
-  display: flex;
   flex-grow: 1;
+  display: flex;
   flex-direction: column;
-  gap: 2rem;
+  justify-content: space-evenly;
+  align-items: center;
   align-content: space-around;
-  max-width: 24rem;
   margin: 0 auto;
+  padding-bottom: 2rem;
 }
